styles.css
/* ... */
.best-seller-card-plant-image.plant-2 {background-image: url("images/peace-lily-plant-terracotta-pot-home-decor-object 1.svg")}
.best-seller-card-plant-image.plant-3 {background-image: url("images/snake-plant-terracotta-pot-home-decor 1.svg")}

.star {cursor: pointer; display: inline-block; background-image: url("icons/ant-design_star-filled.svg"); width: 1.8em; height: 1.8em; background-position: center; background-size: contain; background-repeat: no-repeat}

.best-seller-card-buy-details {margin-top: auto; display: flex; flex-direction: row; align-items: center; justify-content: space-between}
.best-seller-card-price {font-weight: 500; font-size: calc(1.4vmax + 0.6em)}
.plus-button {
    background-image: url("icons/akar-icons_circle-plus-fill.svg");
    width: 4.5em;
    height: 4.5em;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    cursor: pointer;
}


.reference-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 4vh;
    grid-auto-flow: row;
    grid-template-areas:
    "image-1 image-2"
    "image-3 image-2";
    height: 120vmin;
}

.image-1 {grid-area: image-1; background: rgba(0, 0, 0, .34) url("images/image-1.jpg"); background-blend-mode: darken; display: flex; align-items: center; justify-content: center; cursor: pointer}
.image-2 {grid-area: image-2; background: url("images/image-2.jpg");}
.image-3 {grid-area: image-3; background: url("images/image-3.jpg");}

.reference-image {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 50px;
    color:white;
    font-size: calc(2.5vmax + 0.5em);
    font-weight: 600;
}

.section {margin: calc(4em + 7vh) 0;}
.section-head {margin-bottom: 5vh}
.section-headlight {font-size: calc(3.4vmax + 0.5em); font-weight: 500; display: block; margin-bottom: 3vh;}
.section-description {font-size: calc(0.9vmax + 0.5em); display: inline-block; color: #4F4F4F}

.Reference .section-head {text-align: center}
.Best-Seller .section-description {font-weight: 500}

.section-description-wrapper {display: flex; flex-direction: row; align-items: center; gap: 1em; cursor: pointer}

.Best-Seller .section-description-wrapper .arrow {
    display: inline-block;
    background: url("icons/bi_arrow-right-short.svg") center no-repeat;
    width: 2em;
    height: 2em;
    background-size: contain;
}


.care-container {
    display: flex;
    flex-direction: row;
    gap: 10%;
    justify-content: space-between;
    align-items: center;
}

.Care li {align-items: flex-start;}

.Care ul {
    display: flex;
    flex-direction: column;
    gap: 3em;
}

.Care .icon-sun {background-image: url("icons/sun.svg");}
.Care .icon-water {background-image: url("icons/water.svg");}
.Care .icon-plant {background-image: url("icons/plant.svg");}
.Care .icon-sensor {background-image: url("icons/sensor.svg");}

.care-image {
    background: url("images/unsplash_sEApBUS4fIk.jpg") center no-repeat;
    background-size: cover;
    border-radius: 50px;
    width: 70vmin;
    height: 70vmin;
}

.care-description {font-size: calc(0.8vmax + 0.5em); color: #4F4F4F}

.care-info {max-width: 35vw}



footer {
    display: inline-block;
    width: 100%;
    background: linear-gradient(to right, #566270, #283444);
    color: white;
    padding: 7%;
}

.footer-menu {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 6vh;
}

.footer-menu-item {align-self: flex-start;}
.footer-menu-item:first-child {min-width: 25vw; align-self: center}

.footer-menu-item .newsletter-head {
    font-size: calc(2.6vmax + 0.5em);
    margin-bottom: 2vh;
    display: inline-block;
}

.footer-menu-item b {
    font-size: calc(1.1vmax + 0.5em);
    margin-bottom: 4vh;
    display: inline-block;
    cursor: pointer;
}

.footer-menu-item ul {
    font-size: calc(0.5vmax + 0.5em);
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 2vh;
    cursor: pointer;
}

.footer-copyright {
    text-align: center;
    padding-top: 6vh;
    border-top: 1px white solid;
    font-size: calc(0.8vmax + 0.5em);
}

.search-button {display: block}


@media screen and (max-width: 1200px) {

    .Service li {flex-direction: column}


    .footer-menu {
        flex-direction: column;
        text-align: center;
    }

    .footer-menu-item {
        align-self: center;
    }

    .footer-menu-item b {margin-top:4vh}

}

@media screen and (max-width: 850px) {
    .logo span {display: none}
}


@media screen and (max-width: 660px) {
    .top-strip ul {
        flex-direction: column;
    }

    .point-product, .product-bubble {display: none}

    .section {margin: calc(2em + 4vh) 0;}
}

